[package]
name = "ebe-click"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.7.0", default-features = false, features = [
    "render",
    "animation",
    "bevy_winit",
    "bevy_gilrs",
    "png",
    "hdr",
    "filesystem_watcher",
    "x11"
]}
bevy_kira_audio = { version = "0.10.0", default-features = false, features = [
    "wav",
    "flac",
    "mp3",
    "ogg",
]}
rand = "0.8.5"
